@@ -3,6 +3,8 @@
   now search in all visible windows.
 - Improved hat stability: If a token can retain its hat without
   incurring a larger penalty, it will try to do so.
+- Added new function ~hatty-token-at~: Returns the boundaries of the
+  token at a given position.
 - Improved performance and responsiveness.
 
 * 1.2.0 [2025-02-28 Fri]
